# kivywhisper

./: .gitignore  LICENSE  README.md  main.py  midpoint2a.py  midpoint2b.py  midpoint3a.py  midpoint4c.py  pyproject.toml  requirements.txt  whispertest.py
kivywhisper/: KivyWhisper.spec  faster_whispertest.py  main.py  midpoint1.py  midpoint4a.py  midpoint4b.py  midpoint5.py  whisperspectest.spec
